examples/test/testpolicy1665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1665
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key45: value9
      key35: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value29
          key8: value41
      podSelector:
        matchLabels:
          key41: value43
          key7: value20
          key9: value44
